<resources>

    <string name="app_name">HeSaidSheSaid</string>
    
    <string name="he_said">He Said  </string>
    <string name="she_said">She Said</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="he_said_she_said">He Said She Said</string>
    <string name="dumb">Strings are Dumb</string>
    
    <string name="victory_conditions">Victory Conditions:</string>
    <string name="max_rounds">Max Rounds</string>
    <string name="max_points">Max Points</string>
    <string name="endless">Endless!</string>
    <string name="cards">Cards:</string>
    <string name="use_default">Use Default</string>
    <string name="only_custom">Only Custom Cards</string>
    <string name="player_in_lead">Player in lead can create Custom Cards</string>
    <string name="ok">OK</string>
    <string name="max_points_hint">How Many Points</string>
    <string name="max_rounds_hint">How Many Rounds</string>
    
    <string name="how_many_players">How Many Players?</string>
    <string-array name="player_number_arrays">
        <item>2 Players</item>
        <item>3 Players</item>
        <item>4 Players</item>
        <item>5 Players</item>
        <item>6 Players</item>
        <item>7 Players</item>
        <item>8 Players</item>
        <item>9 Players</item>
        <item>10 Players</item>
        <item>11 Players</item>
        <item>12 Players</item>
        <item>13 Players</item>
        <item>14 Players</item>
        <item>15 Players</item>
        <item>16 Players</item>
    </string-array>
    <string name="back">Back</string>
    <string name="enter_player_names">Enter Player Names:</string>
    
    <string name="cool_person">Noah</string>
    <string name="is_host">is host!</string>
    
    <string name="what_question">What\'s Your Question?</string>
    <string name="quit">Quit</string>
    
    <string name="question">Question:</string>
    
    <string name="what_answer">What\'s Your Answer?</string>
    <string name="score_board">Score Board</string>
    <string name="read_question">Read Question</string>

    <string name="scores">Scores</string>
    
    <string name="choose">Chose the Best Answer!</string>
    
    <string name="win_round">Wins this Round!</string>
    <string name="next_round">Next Round</string>
    
    <string name="is_the">Is The</string>
    <string name="winner">WINNER!</string>
    <string name="main_menu">Main Menu</string>
</resources>
