<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:text="@string/victory_conditions"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
        android:id="@+id/radioVictory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        </RadioGroup>

        <RadioGroup
        android:id="@+id/radioCards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
        </RadioGroup>

        <Button
            android:id="@+id/okSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="27dp"
            android:text="@string/ok" />

        <RadioButton
            android:id="@+id/playerInLead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/okSettingsButton"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="28dp"
            android:text="@string/player_in_lead" />

        <RadioButton
            android:id="@+id/onlyCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/playerInLead"
            android:layout_alignParentLeft="true"
            android:text="@string/only_custom" />

        <RadioButton
            android:id="@+id/useDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/onlyCustom"
            android:layout_alignParentLeft="true"
            android:text="@string/use_default" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/useDefault"
            android:layout_alignParentLeft="true"
            android:text="@string/cards"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/maxRounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:text="@string/max_rounds" />

        <RadioButton
            android:id="@+id/maxPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/maxRounds"
            android:text="@string/max_points" />

        <RadioButton
            android:id="@+id/endless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/maxPoints"
            android:text="@string/endless" />

    </RelativeLayout>

</LinearLayout>
