<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.95" >

        <TextView
            android:id="@+id/textViewRoundWinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:text="@string/cool_person"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonNextRound"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonQuitRoundWinner"
            android:layout_alignBottom="@+id/buttonQuitRoundWinner"
            android:layout_alignParentRight="true"
            android:layout_marginRight="29dp"
            android:text="@string/next_round" />

        <Button
            android:id="@+id/buttonQuitRoundWinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="73dp"
            android:layout_marginLeft="26dp"
            android:text="@string/quit" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewRoundWinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/win_round"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

</LinearLayout>