<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" >

        <TextView
            android:id="@+id/textViewPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="127dp"
            android:text="@string/how_many_players"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Spinner
            android:id="@+id/spinnerPlayerNumber"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textViewPlayer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="87dp"
            android:entries="@array/player_number_arrays"
            android:prompt="@string/how_many_players" />

        <Button
            android:id="@+id/buttonBackHowManyPlayers"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/buttonOKHowManyPlayers"
            android:layout_alignBottom="@+id/buttonOKHowManyPlayers"
            android:layout_toLeftOf="@+id/buttonOKHowManyPlayers"
            android:text="@string/back" />

        <Button
            android:id="@+id/buttonOKHowManyPlayers"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/spinnerPlayerNumber"
            android:layout_marginBottom="82dp"
            android:text="@string/ok" />

    </RelativeLayout>

</LinearLayout>
