<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" >

        <TextView
            android:id="@+id/textViewPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="63dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewPlayerName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:text="@string/question"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:text="Large Text"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/buttonOkDisplayQuestion"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignRight="@+id/textViewQuestion"
            android:layout_below="@+id/textViewQuestion"
            android:layout_marginTop="26dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/buttonQuitDisplayQuestion"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBaseline="@+id/buttonOkDisplayQuestion"
            android:layout_alignBottom="@+id/buttonOkDisplayQuestion"
            android:layout_alignLeft="@+id/textViewQuestion"
            android:text="@string/quit" />

    </RelativeLayout>

</LinearLayout>
